--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-    <h1>New Years Eve</h1>
+    <h1>
+        New Years Eve
+    </h1>
 
     <div class="countdown-container">
         <div class="countdown-el days-c">
@@ -24,7 +26,7 @@
             <span>hours</span>
         </div>
         <div class="countdown-el minutes-c">
-            <p class="big-text" id="minutes">0</p>
+            <p class="big-text" id="mins">0</p>
             <span>minutes</span>
         </div>
         <div class="countdown-el seconds-c">
